--- a/services/app/package.json
+++ b/services/app/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "minimal-react-webpack-babel-setup",
-  "version": "1.0.0",
+  "name": "zksnark-nft-demo-app",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --host 0.0.0.0 --mode development",
-    "test": "echo \"No test specified\" && exit 0"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --host 0.0.0.0 --mode development"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "react-hot-loader": "^4.3.3",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
-  },
-  "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "uuid": "^3.1.0",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1"
   }
 }
