--- a/services/app/.babelrc
+++ b/services/app/.babelrc
@@ -1,7 +1,4 @@
 {
-  "presets": [
-    "env",
-    "react",
-    "stage-2"
-  ]
+    "presets": ["env", "react"],
+    "plugins": ["transform-object-rest-spread"]
 }
