--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,12 @@ services:
     ports:
       - 18861
     networks:
-      - operator
+      - illuminati
     volumes:
       - ./services/proof/main.py:/root/rpyc/main.py
 
   aggregator:
-    build: ./services/operator
+    build: ./services/illuminati
     command: python -m aggregator --host 0.0.0.0 --port 5000
     ports:
       - 5000:5000
@@ -38,11 +38,11 @@ services:
       - testrpc
     networks:
       - blockchain
-      - operator
+      - illuminati
     volumes:
-      - ./services/operator/aggregator:/usr/src/app/aggregator
+      - ./services/illuminati/aggregator:/usr/src/app/aggregator
 
 networks:
   blockchain:
-  operator:
+  illuminati:
   client:
