--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       - 5000:5000
     depends_on:
       - testrpc
+      - proof_service
     networks:
       - blockchain
       - illuminati
