--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - ./services/app:/usr/src/app
+      - ./services/app/src:/usr/src/app/src
+      - ./services/app/webpack.config.js:/usr/src/app/webpack.config.js
+      - ./services/app/package.json:/usr/src/app/package.json
     networks:
       - blockchain
       - client
