Working UI --> backend stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     networks:
       - blockchain
       - client
+    env_file:
+      - .default.env
 
   proof_service:
     build: ./services/proof
