--- a/services/app/package.json
+++ b/services/app/package.json
@@ -27,5 +27,12 @@
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.1.1"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "cross-fetch": "^2.2.2",
+    "drizzle": "^1.2.3",
+    "drizzle-react": "^1.2.0",
+    "redux-thunk": "^2.3.0"
   }
 }
