--- a/services/app/package.json
+++ b/services/app/package.json
@@ -33,6 +33,8 @@
     "cross-fetch": "^2.2.2",
     "drizzle": "^1.2.3",
     "drizzle-react": "^1.2.0",
-    "redux-thunk": "^2.3.0"
+    "ethers": "^3.0.27",
+    "redux-thunk": "^2.3.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
