--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,8 @@ version: "3"
 
 services:
 
-  testrpc:
-    image: trufflesuite/ganache-cli:v6.1.8
-    command: -m "gravity top burden flip student usage spell purchase hundred improve check genre"
+  ethereum:
+    build: ./services/ethereum
     ports:
       - 8545:8545
     networks:
@@ -52,7 +51,7 @@ services:
     ports:
       - 5000:5000
     depends_on:
-      - testrpc
+      - ethereum
       - proof_service
     networks:
       - blockchain
