--- a/services/app/package.json
+++ b/services/app/package.json
@@ -34,6 +34,7 @@
     "drizzle": "^1.2.3",
     "drizzle-react": "^1.2.0",
     "ethers": "^3.0.27",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "xmlhttprequest": "^1.8.0"
   }
